DKAN Harvest:
 - Added DKAN Harvest module into DKAN Core.
 - Added UI to add harvest sources
 - Added UI to manage harvest sources and datasets
 - Fix dkan harvest feature overridden after install.
 - Removed row from migration map table when a dataset is deleted.
 - Added Batch API on 'Harvest now' action.
DKAN Migrate Base
 - Added DKAN Migrate Base module into DKAN Core.
DKAN Workflow:
 - Update DKAN workflow vbo customizations to not affect other vbo forms.
DKAN Dataset:
 - Added DKAN Dataset module into DKAN Core.
 - Added default image for groups.
 - Add preview support for resources of many more formats, outside of recline.js. Support added for JSON, geojson, XML, ArcGIS REST, WMS, images, PDF, ZIP
 - Fix bugs in resource mimetypes and previews.
 - Groups field on Dataset form was modified to be a single select with all group options and it was moved from the tabs section to the main section of the form. 
 - Groups field was hidden on the resource form since groups are assigned automatically based on the parent datasets.
 - Add more frequency update options to the dataset creation form https://project-open-data.cio.gov/iso8601_guidance/#accrualperiodicity
 - Moved and renamed the following fields from ODFE to DKAN Core: field_is_part_of, field_data_dictionary_type, field_landing_page, field_pod_theme, field_conforms_to, field_rights, field_language.
 - Added hook updates to handle the renaming of the old ODFE fields removing the 'odfe' namespacing.
 - Added hook update to migrate the content from field_odfe_category to field_pod_theme on Datasets.
 - Added new option on DKAN Dataset Forms to enable POD based validation on Dataset form.
 - Added new option on DKAN Dataset Forms to enable Groups field validation on Dataset form.
 - Fixes to groups UX: Group body field now labeled "Description," longer group descriptions do not get cut off after 200 characters on group page, and extraneous "about" tab on Group node edit form removed