@@ -15,3 +15,7 @@
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
 }
+
+div.datasets-count-preview span {
+    font-weight: bold;
+}
